Agragado index: el index es funcional

--- a/Tareas/tarea-landing-page/index.html
+++ b/Tareas/tarea-landing-page/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <h1>
-            Si lees esto quiere decir que no hice la tarea o estas en una version descatualizada.
-        </h1>
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Simen inicio</title>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
+  <header>
+    <div class="container">
+      <img class="logo-png" src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/b06d7d59-cb0a-4fc3-8ced-7ab9fe02a68f___19999b42961a45dbb2f4293973939c0b.svg" alt="Logo siman" class="logo">
+      <navbar class="navbar">
+      <a href="index.html" class="nav-item">Inicio</a>
+      <a href="products.html"class="nav-item">Productos</a>
+      <a href="contacts.html"class="nav-item">Contacto</a>
+      </navbar>
+    </div>
+  </header>
+  <main>
+    <div class="main-container">
+      <div class="new-1">
+        <img alt="imagen-crazyweek" src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/7cf54781-c0ec-41f8-a41f-4673637cd4b1___e35695b99294aa24e7ba8186c2c40760.gif">
+      </div>
+      <div class="new-2">
+        <img alt="anuncio cama" src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/3e8fe47e-d53c-44d1-a677-004512a5c56a___101b1e1e567bafc1fc6f5056c7c1777d.jpg">
+        <div class="new-3">
+          <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/eeb5d5e8-018b-4ca6-8641-5d57ca7310cb___81bffffd204633e3b3b282e67d639acd.jpg" alt="anuncio ropa hombre">
+          <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/11ef9d09-e38c-4237-b299-bc3d9197aa44___f2aea58cfe0f56b7b8cb478cd4d5efe2.jpg" alt="anuncio ropa mujer">
+        </div>
+      </div>
+    </div>
+    
+  </main>
+  <footer>
+    © 2025 Simen
+  </footer>
+</body>
 </html>
