--- a/Tareas/tarea-landing-page/contacts.html
+++ b/Tareas/tarea-landing-page/contacts.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
   <header>
     <div class="container">
       <img class="logo-png" src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/b06d7d59-cb0a-4fc3-8ced-7ab9fe02a68f___19999b42961a45dbb2f4293973939c0b.svg" alt="Logo siman" class="logo">
@@ -16,11 +17,44 @@
       </navbar>
     </div>
   </header>
+
   <main>
-    
+    <div class="contacts-container">
+       <h2>Contáctanos</h2>
+  <form>
+    <div class="field">
+      <label for="nombre">Nombre completo</label>
+      <input type="text" id="nombre" name="nombre" required>
+    </div>
+
+    <div class="field">
+      <label for="email">Correo electrónico</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+
+    <div class="field">
+      <label for="telefono">Teléfono</label>
+      <input type="tel" id="telefono" name="telefono" pattern="[0-9]{8}" placeholder="Ej: 2298-3777" required>
+    </div>
+
+    <div class="field">
+      <label for="asunto">Asunto</label>
+      <input type="text" id="asunto" name="asunto" required>
+    </div>
+
+    <div class="field">
+      <label for="mensaje">Mensaje</label>
+      <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+    </div>
+
+    <button type="submit">Enviar mensaje</button>
+  </form>
+    </div>
   </main>
+
   <footer>
-    © 2025 Simen
+    © 2025 Siman
   </footer>
+
 </body>
 </html>
