--- a/Tareas/tarea-landing-page/products.html
+++ b/Tareas/tarea-landing-page/products.html
@@ -17,10 +17,19 @@
     </div>
   </header>
   <main>
-    
+    <div class="products-container">
+      
+    </div>
   </main>
   <footer>
-    © 2025 Simen
+    <p class="local"> Almacenes Siman S.A. de C.V. - NIT: 0614–170266–001-3
+      Almacenes venta de diversos artículos - Paseo General Escalón, 
+      Centro Comercial Galerías, San Salvador.</p>
+    <var class="info-footer">
+    <p>📧 contacto@siman.com</p>
+    <p>📞 Llámanos 2298-3777</p>
+    </var>
+    © 2025 Siman
   </footer>
 </body>
 </html>
