cambios productos,index, contacts: products funcional y cambios menores

--- a/Tareas/tarea-landing-page/index.html
+++ b/Tareas/tarea-landing-page/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simen inicio</title>
+  <title>Simen</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
