--- a/Tareas/tarea-landing-page/products.html
+++ b/Tareas/tarea-landing-page/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simen inicio</title>
+  <title>Simen productos</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -18,7 +18,52 @@
   </header>
   <main>
     <div class="products-container">
-      
+        <h2>Lo más vendido</h2>
+  <div class="grid-productos">
+
+    <div class="product">
+      <img src="https://siman.vtexassets.com/arquivos/ids/5517248-500-auto?v=638514040869770000&width=500&height=auto&aspect=true" alt="imagen play station 5">
+      <h3>PlayStation 5 standard 825GB</h3>
+      <p class="description">SSD de ultra alta velocidad: maximice sus sesiones de juego con tiempos de carga casi instantáneos para los juegos de PS5™ instalados. </p>
+      <p class="price">Precio: <span class="original">$819.00</span> <span class="discount">$769.00</span></p>
+    </div>
+
+    <div class="product">
+      <img src="https://siman.vtexassets.com/arquivos/ids/6981151-800-auto?v=638848229719600000&width=800&height=auto&aspect=true" alt="Audifonos">
+      <h3>Audífonos Bluetooth Over Ear Sony WH-1000XM5 con Noise Cancelling</h3>
+      <p class="description">Descubre el nivel más alto de inmersión con los Sony WH-1000XM5, los audífonos inalámbricos con cancelación de ruido líderes en su clase. Equipados con dos procesadores y ocho micrófonos</p>
+      <p class="price">Precio: <span class="original">$429.00</span> <span class="discount">$339.00</span></p>
+    </div>
+
+    <div class="product">
+      <img src="https://siman.vtexassets.com/arquivos/ids/6643837-600-auto?v=638767211941600000&width=600&height=auto&aspect=true 600w,https://siman.vtexassets.com/arquivos/ids/6643837-800-auto?v=638767211941600000&width=800&height=auto&aspect=true 800w,https://siman.vtexassets.com/arquivos/ids/6643837-1200-auto?v=638767211941600000&width=1200&height=auto&aspect=true 1200w" alt="Auriculares inalambricos">
+      <h3>Audífonos Bluetooth In Ear Sony WF-C510</h3>
+      <p class="description">Disfruta de comodidad durante todo el día y un sonido superior en cualquier lugar con los auriculares inalámbricos verdaderos WF-C510 negros de Sony</p>
+      <p class="price">Precio: <span class="original">$69.00</span> <span class="discount">$44.90</span></p>
+    </div>
+
+    <div class="product">
+      <img src="https://siman.vtexassets.com/arquivos/ids/3936405-800-auto?v=638120876569730000&width=800&height=auto&aspect=true" alt="Bocina alexa imagen">
+      <h3>Bocina Amazon Echo Dot (5.ª gen) 15Watts</h3>
+      <p class="description">Disfruta de una experiencia de audio superior a los Echo Dot anteriores con Alexa, en la que obtendrás voces más nítidas, graves más profundos y sonido vibrante en cualquier habitación.</p>
+      <p class="price">Precio: <span class="original">$79.00</span> <span class="discount">$64.90</span></p>
+    </div>
+
+    <div class="product">
+      <img src="https://siman.vtexassets.com/arquivos/ids/5178924-800-auto?v=638433762460000000&width=800&height=auto&aspect=true" alt="Bicicleta de montaña imagen">
+      <h3>Bicicleta Valdez mtb color verde 2x8 hidráulico</h3>
+      <p class="description">La bicicleta Valdez MTB 2x8 Hidráulico en color negro con detalles en verde es una opción increíble para los ciclistas que buscan un rendimiento excepcional y un estilo llamativo</p>
+      <p class="price">Precio: <span class="original">$429.00</span> <span class="discount">$399.00</span></p>
+    </div>
+
+    <div class="product">
+      <img src="https://siman.vtexassets.com/arquivos/ids/5952201-800-auto?v=638567383335430000&width=800&height=auto&aspect=true" alt="imagen bicicleta para niños">
+      <h3>Bicicleta surtida Corsario bmx cross rin 16" (4 - 5 años)</h3>
+      <p class="description">Descubre la Bicicleta Corsario BMX Cross rin 16" una opción perfecta para los pequeños y pequeñas aventureras en busca de emociones sobre ruedas. Diseñada pensando en la seguridad y la diversión, esta bicicleta ofrece una combinación única de características que harán que tu hijo se sienta como un verdadero campeón.</p>
+      <p class="price">Precio: <span class="original">$79.90</span> <span class="discount">$69.99</span></p>
+    </div>
+
+  </div>
     </div>
   </main>
   <footer>
