agragada tarea Estructuras JS

--- a/Clases/JAVASCRIPT/index.html
+++ b/Clases/JAVASCRIPT/index.html
@@ -5,5 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica JS</title>
 </head>
-    <h1></h1>
+<body style="background-color: gray;">
+    <h1 id="textoSaludo"> <span>Holiwiis</span> </h1>
+
+    <div id="contenido">
+
+
+    </div>
+    <button id="botonMagico">Magia</button>
+    <button id="btnArraycito">Apretame porfa</button>
+
+    <script src="./main.js"></script>
+</body>    
 </html>
